Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b71f284a012d7490bde4a3

--- a/notebooks/basic_mlflow_client.ipynb
+++ b/notebooks/basic_mlflow_client.ipynb
@@ -55,7 +55,21 @@
     {
      "data": {
       "text/plain": [
-       "<RegisteredModel: aliases={}, creation_timestamp=1758501006243, description='', last_updated_timestamp=1758501006243, latest_versions=[], name='xgb-demo-wadkars-demo-v1', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651,68b8a07b2ad64d0492eb2c97-68b8a07b2ad64d0492eb2c96',\n",
+       "<RegisteredModel: aliases={}, creation_timestamp=1758501006243, description='', last_updated_timestamp=1758501009622, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1758501009622, current_stage='None', description='XGB basic demo — acc=0.9580', last_updated_timestamp=1758501009622, name='xgb-demo-wadkars-demo-v1', run_id='173ecdb96db84c8d97a9513b7a0b4a81', run_link='', source='mlflow-artifacts:/mlflow/173ecdb96db84c8d97a9513b7a0b4a81/artifacts/model', status='READY', status_message='', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651,68b8a07b2ad64d0492eb2c97-68b8a07b2ad64d0492eb2c96',\n",
+       " 'mlflow.domino.environment_id': '68b0bb70dc77613e66e6368d',\n",
+       " 'mlflow.domino.environment_revision_id': '68ceaf1ac4ae886f22d8150d',\n",
+       " 'mlflow.domino.hardware_tier': 'medium-k8s',\n",
+       " 'mlflow.domino.project_id': '68b08bbfdc77613e66e6364e',\n",
+       " 'mlflow.domino.project_name': 'ddl-end-to-end-demo',\n",
+       " 'mlflow.domino.provenance_checkpoint_id': '68d0987019b70f6cdbd1b7ca',\n",
+       " 'mlflow.domino.run_id': '68d09631e5768d3a1f9f85db',\n",
+       " 'mlflow.domino.run_number': '61',\n",
+       " 'mlflow.domino.user': 'wadkars',\n",
+       " 'mlflow.domino.user_id': '68ac9b59ea374e2b81c48d75',\n",
+       " 'mlflow.source.git.branch': 'main',\n",
+       " 'mlflow.source.git.commit': '08edfe0f8453e980639053081839e82529665c96',\n",
+       " 'mlflow.source.type': 'NOTEBOOK',\n",
+       " 'mlflow.user': 'wadkars'}, user_id='', version='1'>], name='xgb-demo-wadkars-demo-v1', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651,68b8a07b2ad64d0492eb2c97-68b8a07b2ad64d0492eb2c96',\n",
        " 'mlflow.domino.environment_id': '68b0bb70dc77613e66e6368d',\n",
        " 'mlflow.domino.environment_revision_id': '68ceaf1ac4ae886f22d8150d',\n",
        " 'mlflow.domino.hardware_tier': 'medium-k8s',\n",
@@ -95,20 +109,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [00:30:06] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "/opt/conda/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [11:54:15] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "2025/09/22 00:30:08 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
-      "2025/09/22 00:30:09 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: xgb-demo-wadkars-demo-v1, version 1\n"
+      "2025/09/23 11:54:18 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/09/23 11:54:19 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: xgb-demo-wadkars-demo-v1, version 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run ID:        173ecdb96db84c8d97a9513b7a0b4a81\n",
-      "Model URI:     runs:/173ecdb96db84c8d97a9513b7a0b4a81/model\n",
-      "Registered:    xgb-demo-wadkars-demo-v1 v1 (status=READY)\n",
-      "🏃 View run xgb-basic at: http://127.0.0.1:8765/#/experiments/269/runs/173ecdb96db84c8d97a9513b7a0b4a81\n",
+      "Run ID:        85255935d0424dccb73346846eacb56e\n",
+      "Model URI:     runs:/85255935d0424dccb73346846eacb56e/model\n",
+      "Registered:    xgb-demo-wadkars-demo-v1 v2 (status=READY)\n",
+      "🏃 View run xgb-basic at: http://127.0.0.1:8765/#/experiments/269/runs/85255935d0424dccb73346846eacb56e\n",
       "🧪 View experiment at: http://127.0.0.1:8765/#/experiments/269\n"
      ]
     }
@@ -246,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1448228f-c199-41fe-bc0c-72583228e692",
    "metadata": {},
    "outputs": [
@@ -261,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84f236ff4eec44419f2a75ac27ac1b91",
+       "model_id": "579347c46d0d4eb3af2d76d49b4dd3c7",
        "version_major": 2,
        "version_minor": 0
       },
