--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-09-23 11:53:33,697\tINFO util.py:154 -- Outdated packages:\n",
+      "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2025-09-23 11:53:33,777\tINFO util.py:154 -- Outdated packages:\n",
+      "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2025-09-23 11:53:33,927\tINFO util.py:154 -- Outdated packages:\n",
+      "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import math\n",
@@ -66,10 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d8af9bda-73fe-4dde-b2b5-c9c6e54ee9e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upload: ../../../tmp/train.parquet to s3://ddl-wadkars/end-to-end/california/train/train.parquet\n",
+      "upload: ../../../tmp/val.parquet to s3://ddl-wadkars/end-to-end/california/val/val.parquet\n",
+      "upload: ../../../tmp/test.parquet to s3://ddl-wadkars/end-to-end/california/test/test.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "# Download dataset and push to S3\n",
     "\n",
@@ -102,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1adda697-3841-450e-98f4-bed31db79159",
    "metadata": {},
    "outputs": [],
