--- a/notebooks/distributed_ray.ipynb
+++ b/notebooks/distributed_ray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-09-23 11:41:32,074\tINFO util.py:154 -- Outdated packages:\n",
+      "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2025-09-23 11:41:32,281\tINFO util.py:154 -- Outdated packages:\n",
+      "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2025-09-23 11:41:36,028\tINFO util.py:154 -- Outdated packages:\n",
+      "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -61,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f2c7b117-675f-450b-8076-fcef8bf7771a",
    "metadata": {},
    "outputs": [],
@@ -105,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ae4e00d6-0f97-4180-a994-7cb7fc0e83ea",
    "metadata": {},
    "outputs": [],
@@ -115,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e6ce6fe0-a01c-410d-9b65-fd2843dcf049",
    "metadata": {},
    "outputs": [],
@@ -125,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c0a23211-b6aa-469e-878f-b19ec0943134",
    "metadata": {},
    "outputs": [],
@@ -174,10 +190,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "baa8252e-696f-4b3d-90c9-35695188045b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-09-23 11:41:36,232\tINFO client_builder.py:244 -- Passing the following kwargs to ray.init() on the server: log_to_driver\n",
+      "SIGTERM handler is not set because current thread is not the main thread.\n",
+      "2025-09-23 11:41:37,297\tINFO client_builder.py:244 -- Passing the following kwargs to ray.init() on the server: log_to_driver\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"worker_1\": {\n",
+      "    \"wrote\": \"/mnt/data/ddl-end-to-end-demo/03000000/fa31b89f94899135ffffffffffffffffffffffff03000000/probe_03000000_fa31b89f94899135ffffffffffffffffffffffff03000000_156.json\",\n",
+      "    \"size\": 25112\n",
+      "  },\n",
+      "  \"worker_2\": {\n",
+      "    \"wrote\": \"/mnt/data/ddl-end-to-end-demo/03000000/44bfa4a5859b21acffffffffffffffffffffffff03000000/probe_03000000_44bfa4a5859b21acffffffffffffffffffffffff03000000_156.json\",\n",
+      "    \"size\": 25110\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# file: simple_ray_runtime_env_fix.py\n",
     "import os, json, platform\n",
@@ -268,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d995288e-e1aa-4b82-ad68-ad8246d9b55c",
    "metadata": {},
    "outputs": [],
@@ -307,10 +349,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eada5ab2-e8a3-46a1-8dfa-e88e401cdfd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 404: Not Found\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9912422/9912422 [00:00<00:00, 13039183.76it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /mnt/data/ddl-end-to-end-demo/MNIST/raw/train-images-idx3-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 404: Not Found\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 28881/28881 [00:00<00:00, 515719.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /mnt/data/ddl-end-to-end-demo/MNIST/raw/train-labels-idx1-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 404: Not Found\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1648877/1648877 [00:00<00:00, 3805707.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /mnt/data/ddl-end-to-end-demo/MNIST/raw/t10k-images-idx3-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 404: Not Found\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4542/4542 [00:00<00:00, 3076138.99it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /mnt/data/ddl-end-to-end-demo/MNIST/raw/t10k-labels-idx1-ubyte.gz to /mnt/data/ddl-end-to-end-demo/MNIST/raw\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "data_dir = Path(\"/mnt/data/ddl-end-to-end-demo/\")\n",
     "prepare_mnist(data_dir)"
@@ -363,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fbcc7cd3-3353-4aca-9213-4dc39b7ff1a9",
    "metadata": {},
    "outputs": [],
@@ -493,10 +633,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "eff962e3-ae37-4083-8517-dd95b76b9420",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m View detailed results here: /mnt/data/ddl-end-to-end-demo/ray_job/04000000/ray_results/mnist_torch_ddp_04000000\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m To visualize your results with TensorBoard, run: `tensorboard --logdir /tmp/ray/session_2025-09-23_04-40-38_141227_1/artifacts/2025-09-23_04-44-00/mnist_torch_ddp_04000000/driver_artifacts`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m AIR_VERBOSITY is set, ignoring passed-in ProgressReporter for now.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training started with configuration:\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╭──────────────────────────────────────╮\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ Training config                      │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ├──────────────────────────────────────┤\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loop_config/batch_size     256 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loop_config/epochs           5 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loop_config/lr           0.001 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╰──────────────────────────────────────╯\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(RayTrainWorker pid=285, ip=100.64.40.24)\u001b[0m Setting up process group for: env:// [rank=0, world_size=2]\n",
+      "\u001b[36m(TorchTrainer pid=240, ip=100.64.40.24)\u001b[0m Started distributed worker processes: \n",
+      "\u001b[36m(TorchTrainer pid=240, ip=100.64.40.24)\u001b[0m - (node_id=936f07ef3974462e9bd5c531a415e5957437b20db509cbe1afafaf29, ip=100.64.40.24, pid=285) world_rank=0, local_rank=0, node_rank=0\n",
+      "\u001b[36m(TorchTrainer pid=240, ip=100.64.40.24)\u001b[0m - (node_id=8d6efb0cf7c024303f3cb838e65f064cdddec0e3f3d4e8478fdd33a7, ip=100.64.6.4, pid=198) world_rank=1, local_rank=0, node_rank=1\n",
+      "\u001b[36m(RayTrainWorker pid=285, ip=100.64.40.24)\u001b[0m Moving model to device: cuda:0\n",
+      "\u001b[36m(RayTrainWorker pid=285, ip=100.64.40.24)\u001b[0m Wrapping provided model in DistributedDataParallel.\n",
+      "\u001b[36m(RayTrainWorker pid=198, ip=100.64.6.4)\u001b[0m Moving model to device: cuda:0\n",
+      "\u001b[36m(RayTrainWorker pid=198, ip=100.64.6.4)\u001b[0m Wrapping provided model in DistributedDataParallel.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training finished iteration 1 at 2025-09-23 04:44:18. Total running time: 16s\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╭───────────────────────────────╮\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ Training result               │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ├───────────────────────────────┤\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ checkpoint_dir_name           │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_this_iter_s      11.1913 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_total_s          11.1913 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ training_iteration          1 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ epoch                       0 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loss            56.1354 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ val_acc                0.9368 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╰───────────────────────────────╯\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training finished iteration 2 at 2025-09-23 04:44:23. Total running time: 22s\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╭───────────────────────────────╮\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ Training result               │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ├───────────────────────────────┤\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ checkpoint_dir_name           │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_this_iter_s      5.93467 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_total_s           17.126 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ training_iteration          2 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ epoch                       1 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loss            20.9554 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ val_acc                0.9548 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╰───────────────────────────────╯\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training finished iteration 3 at 2025-09-23 04:44:29. Total running time: 28s\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╭───────────────────────────────╮\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ Training result               │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ├───────────────────────────────┤\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ checkpoint_dir_name           │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_this_iter_s      6.00046 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_total_s          23.1264 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ training_iteration          3 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ epoch                       2 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loss            13.9018 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ val_acc                 0.965 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╰───────────────────────────────╯\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training finished iteration 4 at 2025-09-23 04:44:35. Total running time: 34s\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╭───────────────────────────────╮\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ Training result               │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ├───────────────────────────────┤\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ checkpoint_dir_name           │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_this_iter_s      6.00722 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_total_s          29.1337 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ training_iteration          4 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ epoch                       3 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loss            10.2014 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ val_acc                0.9692 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╰───────────────────────────────╯\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training finished iteration 5 at 2025-09-23 04:44:42. Total running time: 40s\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╭───────────────────────────────╮\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ Training result               │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ├───────────────────────────────┤\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ checkpoint_dir_name           │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_this_iter_s      6.01985 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ time_total_s          35.1535 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ training_iteration          5 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ epoch                       4 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ train_loss            7.79215 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m │ val_acc                0.9748 │\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m ╰───────────────────────────────╯\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Training completed after 5 iterations at 2025-09-23 04:44:43. Total running time: 42s\n",
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(TunerInternal pid=677)\u001b[0m Wrote the latest version of all result files and experiment state to '/mnt/data/ddl-end-to-end-demo/ray_job/04000000/ray_results/mnist_torch_ddp_04000000' in 0.0330s.\n"
+     ]
+    }
+   ],
    "source": [
     "main()\n"
    ]
