Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b71f284a012d7490bde4a3

--- a/service_accounts/service_accounts_mgmt.ipynb
+++ b/service_accounts/service_accounts_mgmt.ipynb
@@ -563,7 +563,7 @@
    "id": "be5bb3fd-9c2f-4abf-bb04-0ed068bdc871",
    "metadata": {},
    "source": [
-    "## Recap\n",
+    "## Service Accounts\n",
     "\n",
     "A service account can be described as follows ![Service Account Static Design](../assets/ServiceAccountStatic.png)\n"
    ]
@@ -656,7 +656,10 @@
    "id": "9b068dc4-237e-4660-ba66-b36dc18de735",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Production Job Execution \n",
+    "A service account can be described as follows ![Service Account Static Design](../assets/ProdWorkflow.png)"
+   ]
   }
  ],
  "metadata": {
