Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b71f284a012d7490bde4a3

--- a/mlflow_external_access/access_mlflow_externally.ipynb
+++ b/mlflow_external_access/access_mlflow_externally.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "131b5ae6-2e6d-4ff9-a162-26bb8f0c2da1",
+   "metadata": {},
+   "source": [
+    "## MLflow access external to Domino\n",
+    "Accessing MLflow (Experiment Manager/Model Registry) from outside domino ![External MLflow access](../assets/svc_account_model_download.png)\n",
+    "\n",
+    "\n",
+    "Understanding how a MLflow client authenticates to Domino-\n",
+    "\n",
+    "1. User Identity\n",
+    "2. Project Identity\n",
+    "\n",
+    "A MLflow experiment is tied to a Domino Project. The ability to create/access an experiment/run/model in that project requires\n",
+    "the user to be a collaborator on that project. An experiment/run/model-access is tied to a Domino run(Workspace/Job) which is how\n",
+    "Domino determines which project it belongs to. \n",
+    "\n",
+    "What we are doing below is-\n",
+    "1. Provide a token (User identity)\n",
+    "2. Create a job extract a `run-id` (Project Identity). All we need is a `run-id` and as long as we pick one that belongs to the\n",
+    "   user, its good. But doing this allows us to create an audit trail of this access."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ebc91075-c1df-4eb2-b8f5-ed32886c7f60",
