Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -8,16 +8,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/mnt/code\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b50fcc65-7e3d-458f-a01c-0135b21ac2cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sys.path.append(\"/mnt/code\")\n",
     "from utils import ddl_cluster_scaling_client\n",
     "import json\n"
    ]
@@ -102,12 +93,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#worker_hw_tier_name=\"Medium\"\n",
-    "worker_hw_tier_name=\"GPU (small)\"\n",
+    "worker_hw_tier_name=\"Small\"\n",
+    "#worker_hw_tier_name=\"GPU (small)\"\n",
     "\n",
-    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,head_hw_tier_name=\"Medium\", worker_hw_tier_name=worker_hw_tier_name, replicas=2)\n",
+    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,worker_hw_tier_name=worker_hw_tier_name, replicas=3)\n",
     "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind)"
+    "#json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
+    "print(j['restarted_ts'])\n",
+    "restart_ts=j['restarted_ts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f335ba7-1768-4b85-b54f-2c73213a0079",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restart_ts=\"2025-09-24T14:54:56Z\"\n",
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind,scale_start_ts=restart_ts)"
    ]
   },
   {
@@ -129,19 +133,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=cluster_kind)\n",
+    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=cluster_kind,head_hw_tier_name=\"Small\")\n",
     "restarts_at = j['started_at']\n",
     "print(restarts_at)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85a17fed-2aae-4939-85f8-0b7d44cf77c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ddl_cluster_scaling_client.restart_head_node_status(cluster_kind=cluster_kind,restarted_since=restarts_at)"
    ]
   },
   {
@@ -151,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=cluster_kind,restarted_since=restarts_at)"
+    "ddl_cluster_scaling_client.wait_until_head_restart_complete(cluster_kind=cluster_kind,restart_ts=restarts_at)"
    ]
   },
   {
@@ -186,20 +180,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,head_hw_tier_name=\"Medium\",worker_hw_tier_name=\"Small\", replicas=1)\n",
+    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,worker_hw_tier_name=\"Medium\", replicas=1)\n",
     "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind)"
+    "restart_ts=j['restarted_ts']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "496f8f9c-072d-4d8e-a165-b3521ebaf2bd",
+   "id": "5e48ee7d-524b-4afa-8afe-bbd8766ac908",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=cluster_kind,restarted_since=restarts_at)"
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind,scale_start_ts=restart_ts)"
    ]
   },
   {
@@ -218,7 +211,11 @@
    "id": "c56bc92b-5b73-4609-ac43-c08c805e2535",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=cluster_kind,head_hw_tier_name=\"Small\")\n",
+    "restarts_at = j['started_at']\n",
+    "print(restarts_at)"
+   ]
   },
   {
    "cell_type": "code",
@@ -226,7 +223,9 @@
    "id": "5d94d772-41f4-4ca8-a4d6-2ecf7d5c54bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind,scale_start_ts=restart_ts)"
+   ]
   },
   {
    "cell_type": "code",
